CHMOD fix, plugin detection and spacing corrections, to name a few

--- a/css/admin.css
+++ b/css/admin.css
@@ -65,6 +65,9 @@
   -o-transform: scaleX(-1);
   transform: scaleX(-1); }
 
+.download-count::before {
+  content: "\f316"; }
+
 /**
  * Jetpack Contact Form
  */
