--- a/scss/_admin-easy-digital-downloads.scss
+++ b/scss/_admin-easy-digital-downloads.scss
@@ -1,3 +1,3 @@
 .download-count::before {
-    content: "";
+    content: "\f316";
 }
